# Chassis

./: .gitignore  README.md  __init__.py  pyproject.toml  setup.py
.github/workflows/: python-publish.yml
Schemas_MicroService/: schemas.py
database/: __init__.py
microservice-chassis/: connection.py  crud.py
microservice_chassis/: config.py  dependencies.py
